{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 169,
  "lineage": "cc6b8d55-0973-a613-1fa1-8efe59708df4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-system-dev-eip1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0480e161018043377",
            "association_id": "eipassoc-05cdcd59779ae8dd9",
            "domain": "vpc",
            "id": "eipalloc-0480e161018043377",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0f705e57c089829c7",
            "private_dns": "ip-10-0-1-26.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.26",
            "public_dns": "ec2-54-248-25-168.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.25.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-system-dev-igw",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-system-dev-eip1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08aef959249362998",
            "association_id": "eipassoc-08a902b7498404cd4",
            "domain": "vpc",
            "id": "eipalloc-08aef959249362998",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-052f1c4110cac6c0e",
            "private_dns": "ip-10-0-2-217.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.217",
            "public_dns": "ec2-18-177-250-169.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.177.250.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-system-dev-igw",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-system-dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:internet-gateway/igw-018d8a602a735a46d",
            "id": "igw-018d8a602a735a46d",
            "owner_id": "078344337219",
            "tags": {
              "Name": "test-system-dev-igw"
            },
            "tags_all": {
              "Name": "test-system-dev-igw"
            },
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-system-dev-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "test-system-dev-alb-log-bucket",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:loadbalancer/app/test-system-dev-alb/a45617738a7ee02e",
            "arn_suffix": "app/test-system-dev-alb/a45617738a7ee02e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-system-dev-alb-994495802.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:loadbalancer/app/test-system-dev-alb/a45617738a7ee02e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-system-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0230181cac45e9a5b",
              "sg-026bf2655df75186a",
              "sg-0e5ac93593259b662"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fb0eedde35b543e"
              },
              {
                "subnet_id": "subnet-0960e782dd9d513c0"
              }
            ],
            "subnets": [
              "subnet-00fb0eedde35b543e",
              "subnet-0960e782dd9d513c0"
            ],
            "vpc_id": "vpc-02d524091df2b0a85",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_s3_bucket.alb_log",
            "aws_subnet.test-system-dev-public-subnet1a",
            "aws_subnet.test-system-dev-public-subnet1c",
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-http-sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-http_redirect_sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-https-sg.aws_security_group.test-system-dev-sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:listener/app/test-system-dev-alb/a45617738a7ee02e/8a0601d6e8637c5b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:listener/app/test-system-dev-alb/a45617738a7ee02e/8a0601d6e8637c5b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:loadbalancer/app/test-system-dev-alb/a45617738a7ee02e",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-system-dev-alb",
            "aws_s3_bucket.alb_log",
            "aws_subnet.test-system-dev-public-subnet1a",
            "aws_subnet.test-system-dev-public-subnet1c",
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-http-sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-http_redirect_sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-https-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test-system-dev-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:listener/app/test-system-dev-alb/a45617738a7ee02e/5b14a13839c9d923",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これは『HTTP』です",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:listener/app/test-system-dev-alb/a45617738a7ee02e/5b14a13839c9d923",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:loadbalancer/app/test-system-dev-alb/a45617738a7ee02e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-system-dev-alb",
            "aws_s3_bucket.alb_log",
            "aws_subnet.test-system-dev-public-subnet1a",
            "aws_subnet.test-system-dev-public-subnet1c",
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-http-sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-http_redirect_sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-https-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test-system-dev-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:listener/app/test-system-dev-alb/a45617738a7ee02e/8417b87c9d72bb8c",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:078344337219:certificate/c4400b00-26fe-469b-aadf-a7174e52c4a1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これは『HTTPS』ですよ",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:listener/app/test-system-dev-alb/a45617738a7ee02e/8417b87c9d72bb8c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:loadbalancer/app/test-system-dev-alb/a45617738a7ee02e",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.test-system-dev-acm-certificate",
            "aws_lb.test-system-dev-alb",
            "aws_route53_record.test-system-dev-rt53record",
            "aws_s3_bucket.alb_log",
            "aws_subnet.test-system-dev-public-subnet1a",
            "aws_subnet.test-system-dev-public-subnet1c",
            "aws_vpc.test-system-dev-vpc",
            "data.aws_route53_zone.test-system-dev",
            "module.test-system-dev-http-sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-http_redirect_sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-https-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "test-system-dev-lb-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:targetgroup/example/9cb3511c5c63fc2d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:listener-rule/app/test-system-dev-alb/a45617738a7ee02e/8417b87c9d72bb8c/e63f855d339020e5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:listener-rule/app/test-system-dev-alb/a45617738a7ee02e/8417b87c9d72bb8c/e63f855d339020e5",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:listener/app/test-system-dev-alb/a45617738a7ee02e/8417b87c9d72bb8c",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.test-system-dev-acm-certificate",
            "aws_lb.test-system-dev-alb",
            "aws_lb_listener.test-system-dev-https-listener",
            "aws_lb_target_group.test-system-dev-lb-target-group",
            "aws_route53_record.test-system-dev-rt53record",
            "aws_s3_bucket.alb_log",
            "aws_subnet.test-system-dev-public-subnet1a",
            "aws_subnet.test-system-dev-public-subnet1c",
            "aws_vpc.test-system-dev-vpc",
            "data.aws_route53_zone.test-system-dev",
            "module.test-system-dev-http-sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-http_redirect_sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-https-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test-system-dev-lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:targetgroup/example/9cb3511c5c63fc2d",
            "arn_suffix": "targetgroup/example/9cb3511c5c63fc2d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:078344337219:targetgroup/example/9cb3511c5c63fc2d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "dependencies": [
            "aws_lb.test-system-dev-alb",
            "aws_s3_bucket.alb_log",
            "aws_subnet.test-system-dev-public-subnet1a",
            "aws_subnet.test-system-dev-public-subnet1c",
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-http-sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-http_redirect_sg.aws_security_group.test-system-dev-sg",
            "module.test-system-dev-https-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test-system-dev-private-ngw1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0480e161018043377",
            "association_id": "eipassoc-05cdcd59779ae8dd9",
            "connectivity_type": "public",
            "id": "nat-065c118f955864c0c",
            "network_interface_id": "eni-0f705e57c089829c7",
            "private_ip": "10.0.1.26",
            "public_ip": "54.248.25.168",
            "subnet_id": "subnet-0960e782dd9d513c0",
            "tags": {
              "Name": "test-system-dev-private-ngw1a"
            },
            "tags_all": {
              "Name": "test-system-dev-private-ngw1a"
            }
          },
          "dependencies": [
            "aws_eip.test-system-dev-eip1a",
            "aws_internet_gateway.test-system-dev-igw",
            "aws_subnet.test-system-dev-public-subnet1a",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test-system-dev-private-ngw1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08aef959249362998",
            "association_id": "eipassoc-08a902b7498404cd4",
            "connectivity_type": "public",
            "id": "nat-0923b4bd68d60253b",
            "network_interface_id": "eni-052f1c4110cac6c0e",
            "private_ip": "10.0.2.217",
            "public_ip": "18.177.250.169",
            "subnet_id": "subnet-00fb0eedde35b543e",
            "tags": {
              "Name": "test-system-dev-private-ngw1c"
            },
            "tags_all": {
              "Name": "test-system-dev-private-ngw1c"
            }
          },
          "dependencies": [
            "aws_eip.test-system-dev-eip1c",
            "aws_internet_gateway.test-system-dev-igw",
            "aws_subnet.test-system-dev-public-subnet1c",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "test-system-dev-private-rt1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ff5eff5d1f2722791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-065c118f955864c0c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff5eff5d1f272279",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test-system-dev-eip1a",
            "aws_internet_gateway.test-system-dev-igw",
            "aws_nat_gateway.test-system-dev-private-ngw1a",
            "aws_route_table.test-system-dev-private-rtb1a",
            "aws_subnet.test-system-dev-public-subnet1a",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "test-system-dev-private-rt1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a21934601ea9b45f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0923b4bd68d60253b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a21934601ea9b45f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test-system-dev-eip1c",
            "aws_internet_gateway.test-system-dev-igw",
            "aws_nat_gateway.test-system-dev-private-ngw1c",
            "aws_route_table.test-system-dev-private-rtb1c",
            "aws_subnet.test-system-dev-public-subnet1c",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "test-system-dev-pubric-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-018d8a602a735a46d",
            "id": "r-rtb-0810b9ad2d377d4f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0810b9ad2d377d4f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-system-dev-igw",
            "aws_route_table.test-system-dev-pubric-rtb",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-system-dev-private-rtb1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:route-table/rtb-0ff5eff5d1f272279",
            "id": "rtb-0ff5eff5d1f272279",
            "owner_id": "078344337219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-065c118f955864c0c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-system-dev-private-rtb1a"
            },
            "tags_all": {
              "Name": "test-system-dev-private-rtb1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-system-dev-private-rtb1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:route-table/rtb-0a21934601ea9b45f",
            "id": "rtb-0a21934601ea9b45f",
            "owner_id": "078344337219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0923b4bd68d60253b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-system-dev-private-rtb1c"
            },
            "tags_all": {
              "Name": "test-system-dev-private-rtb1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-system-dev-pubric-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:route-table/rtb-0810b9ad2d377d4f5",
            "id": "rtb-0810b9ad2d377d4f5",
            "owner_id": "078344337219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018d8a602a735a46d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-system-dev-pubric-rtb"
            },
            "tags_all": {
              "Name": "test-system-dev-pubric-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-system-dev-private-rtb-asso1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3d4ad84e7261ae7",
            "route_table_id": "rtb-0ff5eff5d1f272279",
            "subnet_id": "subnet-01806ea55072d6e62"
          },
          "dependencies": [
            "aws_route_table.test-system-dev-private-rtb1a",
            "aws_subnet.test-system-dev-private-subnet1a",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-system-dev-private-rtb-asso1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0960f0e411620392f",
            "route_table_id": "rtb-0a21934601ea9b45f",
            "subnet_id": "subnet-0f50fb3105ce47077"
          },
          "dependencies": [
            "aws_route_table.test-system-dev-private-rtb1c",
            "aws_subnet.test-system-dev-private-subnet1c",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-system-dev-pubric-rtb-asso1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0830127aa7c607330",
            "route_table_id": "rtb-0810b9ad2d377d4f5",
            "subnet_id": "subnet-0960e782dd9d513c0"
          },
          "dependencies": [
            "aws_route_table.test-system-dev-pubric-rtb",
            "aws_subnet.test-system-dev-public-subnet1a",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-system-dev-pubric-rtb-asso1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9b5e2091c4e91d5",
            "route_table_id": "rtb-0810b9ad2d377d4f5",
            "subnet_id": "subnet-00fb0eedde35b543e"
          },
          "dependencies": [
            "aws_route_table.test-system-dev-pubric-rtb",
            "aws_subnet.test-system-dev-public-subnet1c",
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-system-dev-private-subnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:subnet/subnet-01806ea55072d6e62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01806ea55072d6e62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078344337219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-system-dev-private-subnet1a"
            },
            "tags_all": {
              "Name": "test-system-dev-private-subnet1a"
            },
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-system-dev-private-subnet1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:subnet/subnet-0f50fb3105ce47077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f50fb3105ce47077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078344337219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-system-dev-private-subnet1c"
            },
            "tags_all": {
              "Name": "test-system-dev-private-subnet1c"
            },
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-system-dev-public-subnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:subnet/subnet-0960e782dd9d513c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0960e782dd9d513c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "078344337219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-system-dev-public-subnet1a"
            },
            "tags_all": {
              "Name": "test-system-dev-public-subnet1a"
            },
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-system-dev-public-subnet1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:subnet/subnet-00fb0eedde35b543e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fb0eedde35b543e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "078344337219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-system-dev-public-subnet1c"
            },
            "tags_all": {
              "Name": "test-system-dev-public-subnet1c"
            },
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-system-dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:vpc/vpc-02d524091df2b0a85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ef7865568e4e3ed",
            "default_route_table_id": "rtb-013fa226eb44973f7",
            "default_security_group_id": "sg-0465a6d8eab1e6352",
            "dhcp_options_id": "dopt-0229c50dc04303b8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d524091df2b0a85",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013fa226eb44973f7",
            "owner_id": "078344337219",
            "tags": {
              "Name": "test-system-dev-vpc"
            },
            "tags_all": {
              "Name": "test-system-dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test-system-dev-http-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-system-dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:security-group/sg-026bf2655df75186a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026bf2655df75186a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-system-dev-http-sg",
            "name_prefix": "",
            "owner_id": "078344337219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-system-dev-http-sg"
            },
            "tags_all": {
              "Name": "test-system-dev-http-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test-system-dev-http-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-26301971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-026bf2655df75186a",
            "security_group_rule_id": "sgr-0bdb9fab31a5d890e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-http-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "module": "module.test-system-dev-http-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2728935976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-026bf2655df75186a",
            "security_group_rule_id": "sgr-0f45d8292516cc3cb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-http-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "module": "module.test-system-dev-http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-system-dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:security-group/sg-0230181cac45e9a5b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0230181cac45e9a5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http-redirect-sg",
            "name_prefix": "",
            "owner_id": "078344337219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-system-dev-http_redirect_sg"
            },
            "tags_all": {
              "Name": "test-system-dev-http_redirect_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test-system-dev-http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3049713579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0230181cac45e9a5b",
            "security_group_rule_id": "sgr-0a9926e646b2b5060",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-http_redirect_sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "module": "module.test-system-dev-http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-2244420978",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0230181cac45e9a5b",
            "security_group_rule_id": "sgr-04e27f0825f61504c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-http_redirect_sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "module": "module.test-system-dev-https-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-system-dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:security-group/sg-0e5ac93593259b662",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5ac93593259b662",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https-sg",
            "name_prefix": "",
            "owner_id": "078344337219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-system-dev-https-sg"
            },
            "tags_all": {
              "Name": "test-system-dev-https-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test-system-dev-https-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-496701223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e5ac93593259b662",
            "security_group_rule_id": "sgr-0714930e25008710d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-https-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "module": "module.test-system-dev-https-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3992678737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e5ac93593259b662",
            "security_group_rule_id": "sgr-03c5a38f756c48435",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-https-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "module": "module.test-system-dev-ssh-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-system-dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:078344337219:security-group/sg-046750c0b061c8d9c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046750c0b061c8d9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-system-dev-ssh-sg",
            "name_prefix": "",
            "owner_id": "078344337219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-system-dev-ssh-sg"
            },
            "tags_all": {
              "Name": "test-system-dev-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d524091df2b0a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.test-system-dev-ssh-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3849829697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-046750c0b061c8d9c",
            "security_group_rule_id": "sgr-08c097d52a83fbe53",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-ssh-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    },
    {
      "module": "module.test-system-dev-ssh-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-533692491",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-046750c0b061c8d9c",
            "security_group_rule_id": "sgr-02a305cb733be53af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-system-dev-vpc",
            "module.test-system-dev-ssh-sg.aws_security_group.test-system-dev-sg"
          ]
        }
      ]
    }
  ]
}